#10: Only authorized users can add ,edit and delete posts

--- a/BlogPost/BlogPost.csproj
+++ b/BlogPost/BlogPost.csproj
@@ -20,4 +20,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Users\Data\" />
+    <Folder Include="Areas\Users\Models\" />
+  </ItemGroup>
+
 </Project>
